cargo-features = ["edition"]

[package]
edition = "2018"
name = "sol"
version = "0.1.0"
authors = ["jappie <superpwnzormegaman@gmail.com>"]
license-file = "license.txt"

[dependencies]
conrod = {version = "0.61.1", features = ["piston"] }
pistoncore-input = "*" 
find_folder = "*"
piston_window = "*"
chrono = "*"
petgraph = "*"
